methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:-6: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^MethodsReturning:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime2.MethodsReturning'
override def run() { def haveBaggle():Boolean = {var vuBiscuit:Boolean = false;
             ^