methods.returning.MethodsReturning.scala.code
override def run() { def haveBaggle():Boolean = {var vuBiscuit:Boolean = false;
                            var p:Int = 1;
                                        while (p!=6) {if (estSurBiscuit()) {vuBiscuit=true}; avance(); p=p+1;}
                                       recule();recule();recule();recule();recule();recule();return vuBiscuit}

while (!(haveBaggle())) {droite(); avance(); gauche(); }
                   }